Fix and replace header

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Company</title>
+  <title>MySite</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -19,7 +19,7 @@
 
   <header role="banner">
   <div>
-    <i><a href="index.html"><img src="images/icon.svg" alt="logo"></a></i>
+    <i><a href="index.html"><img class="logo absolute" src="images/logo.png" alt="logo"></a></i>
     <div class="nav navtop text-right">
       <nav role="navigation" id="nav" tabindex="0">
         <ul class="push-none grid grid-middle unit list-group">
@@ -34,33 +34,34 @@
   <section class="index-banner pad-t-2 pad-b-2 relative">
     <div class="banner-text absolute wrapper insland-1-2">
     <h1 class="push-0 nina">your site.</h1>
-    <h1 class="nina">your way.</h1>
+    <h1 class="push-0 nina">your way.</h1>
+    <h6 class"not-bold">Build your very own website</h6>
     <a href="sign-up.html" class="btn btn-small">Sign Up</a>
     </div>
   </section>
   </header>
 
-  <main class="wrapper" id="main" tabindex="0" role="main">
+  <main class="wrapper islad" id="main" tabindex="0" role="main">
 
   <section>
     <div class="features grid">
       <div class="feature-one unit xs-1 s-1 m-1-3 l-1-3 island-1-2">
         <img src="images/placeholder-2by3.svg" alt="">
-        <h2>Feature 1</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-        <a href="tour.html" class="btn btn-small">More Features</a>
+        <h2>Total Control</h2>
+        <p>Build your dream website the way you want, using our expertly crafted development tools designed to give you total control over your websites design and functionality. Never run out of options to design the perfect website.</p>
+        <a href="sign-up.html" class="btn btn-small">Get Started</a>
       </div>
       <div class="feature-two unit xs-1 s-1 m-1-3 l-1-3 island-1-2">
         <img src="images/placeholder-2by3.svg" alt="">
-        <h2>Feature 2</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-        <a href="tour.html" class="btn btn-small">More Features</a>
+        <h2>Get Online Fast</h2>
+        <p>You’ll love how fast you can get online and look amazing! MySite Artificial Design Intelligence (ADI) will instantly build a website personalized just for you, complete with professional text and images that can be tweaked to your liking.</p>
+        <a href="tour.html" class="btn btn-small">Get Started</a>
       </div>
       <div class="feature-three unit xs-1 s-1 m-1-3 l-1-3 island-1-2">
         <img src="images/placeholder-2by3.svg" alt="">
-        <h2>Feautre 3</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-        <a href="tour.html" class="btn btn-small">More Features</a>
+        <h2>Creative Library</h2>
+        <p>Design your website to look clean and professional for free with access to our basic template library that contains 200+ pre-made professionally designed templates, icons and more to help create a website that suites your needs.</p>
+        <a href="tour.html" class="btn btn-small">View Templates</a>
       </div>
     </div>
 
@@ -74,12 +75,16 @@
 
     <div class="about text-center max-length pad-t-2">
       <h2>About</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p class="aboutp">MySite is a website building SaaS website founded in 2008 by Yale Grad Michael Website. In the summer of 2008 the Yale Computer Science Graduate noticed an increase of people using the internet and realized that there was a market of people who wanted to create websites without any prior experience or knowledge about building websites. Thankfully for these people Michael Website created the greatest website builder to ever exist, not only that but he made accessible to people for absolutely free.</p>
+
+      <p class="aboutp">  The quality product paired with the choice to either use it for free or pay for a cheap monthly subscription made it a success. By 2010 MySite reached 1,000,000 registered users who had created over 200,000 websites. These websites varied in content and subject matter but all had one thing in common, they were quality websites that wouldn’t have been possible without Mr.Websites hard work and dedication to create a quality, human-centred product</p>
+
+      <p class="aboutp">Now in 2019 MySite has over 10,000,000 registered users and 2000 employees Our work environment is one of the most unique on the planet. Home to a diverse group of professionals (and their dogs) in Israel, USA, Lithuania, Germany, Brazil and Ukraine we bring passion, skill and innovation to products people love to use. We’re fueled on snacks, beer and popsicles so we can stay creative, happy and fulfilled.</p>
       <a href="sign-up.html" class="btn btn-large">Sign Up</a>
     </div>
 
     <div class="contact text-center max-length pad-t-2">
-      <h2>Our Contacts</h2>
+      <h2>Our Contacts:</h2>
       <dl class="contact-info">
         <dt>Email</dt>
         <dd>companyemail@email.com</dd>
@@ -99,18 +104,18 @@
         <i class="icon i-32 embed embed-1by1"><a href="https://www.facebook.com/"><img class="embed-item height" src="images/facebook.svg" alt=""></a></i>
         <i class="icon i-32 embed embed-1by1"><a href="https://twitter.com/"><img class="embed-item height" src="images/twitter.svg" alt=""></a></i>
       </div>
-      <div class="milli nav">
+      <div class="milli nav text-right">
         <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tour.html">Products</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="sign-up.html">Sign Up</a></li>
+          <ul class="push-none grid grid-middle unit list-group">
+            <li class="unit gutter-1-2"><a href="index.html">Home</a></li>
+            <li class="unit gutter-1-2"><a href="tour.html">Products</a></li>
+            <li class="unit gutter-1-2"><a href="pricing.html">Pricing</a></li>
+            <li class="unit gutter-1-2"><a href="sign-up.html">Sign Up</a></li>
           </ul>
         </nav>
       </div>
-      <div class="copyright">
-        <small>©Company Name, 2019</small>
+      <div class="copyright text-right island-1-2">
+        <small class="pico">©Company Name, 2019</small>
       </div>
     </div>
   </footer>
