--- a/sign-up.html
+++ b/sign-up.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Title</title>
+  <title>Sign-Up</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -26,7 +26,7 @@
   </div>
   </header>
 
-  <main id="main" tabindex="0" role="main">
+  <main class="gutter wrapper" id="main" tabindex="0" role="main">
     <section class="contact pad-t-2 pad-b-2 island">
       <div class="max-length">
         <h1 class="pad-t">Sign Up</h1>
@@ -60,22 +60,22 @@
   <footer role="contentinfo">
     <div class="">
       <div class="social-icons">
-        <i class="icon i-32 embed embed-1by1"><a href="#instagram"><img class="embed-item" src="image/instagram.svg" alt="instagram"></a></i>
-        <i class="icon i-32 embed embed-1by1"><a href="#facebook"><img class="embed-item" src="image/facebook.svg" alt=""></a></i>
-        <i class="icon i-32 embed embed-1by1"><a href="#twitter"><img class="embed-item" src="image/twitter.svg" alt=""></a></i>
+        <i class="icon i-32 embed embed-1by1"><a href="https://www.instagram.com"><img class="embed-item height" src="images/instagram.svg" alt="instagram"></a></i>
+        <i class="icon i-32 embed embed-1by1"><a href="https://www.facebook.com/"><img class="embed-item height" src="images/facebook.svg" alt=""></a></i>
+        <i class="icon i-32 embed embed-1by1"><a href="https://twitter.com/"><img class="embed-item height" src="images/twitter.svg" alt=""></a></i>
       </div>
-      <div class="milli nav">
+      <div class="milli nav text-right">
         <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tour.html">Products</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="sign-up.html">Sign Up</a></li>
+          <ul class="push-none grid grid-middle unit list-group">
+            <li class="unit gutter-1-2"><a href="index.html">Home</a></li>
+            <li class="unit gutter-1-2"><a href="tour.html">Products</a></li>
+            <li class="unit gutter-1-2"><a href="pricing.html">Pricing</a></li>
+            <li class="unit gutter-1-2"><a href="sign-up.html">Sign Up</a></li>
           </ul>
         </nav>
       </div>
-      <div class="copyright">
-        <small>©Company Name, 2019</small>
+      <div class="copyright text-right island-1-2">
+        <small class="pico">©Company Name, 2019</small>
       </div>
     </div>
   </footer>
