Style the sign up page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <div class="getting-started text-center max-length pad-t-2">
       <h2>Getting Started</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p class="gstarterd">Getting started with MySite is quick and easy! All you have to do is press the sign up button below, enter your name, email, password and that's it! You're now ready to create your very own personalized website!</p>
       <a href="sign-up.html" class="btn btn-large">Sign Up</a>
       <img src="image/placeholder.jpg" alt="">
     </div>
@@ -115,7 +115,7 @@
         </nav>
       </div>
       <div class="copyright text-right island-1-2">
-        <small class="pico">©Company Name, 2019</small>
+        <small class="pico">©MySite, 2019</small>
       </div>
     </div>
   </footer>
