--- a/sign-up.html
+++ b/sign-up.html
@@ -32,27 +32,28 @@
         <h1 class="pad-t">Sign Up</h1>
         <form class="push-0" action="https://formspree.io/burr0117@algonquinlive.com" method="POST">
           <fieldset>
-            <legend class="italic mega push">Personal details</legend>
+            <legend class="italic mega push">Personal information</legend>
             <div class="grid">
-              <div class="push unit xs-1 s-1 m-1 l-1-2 pad-r milli">
+              <div class="push unit xs-1 s-1 m-1 l-1 pad-r milli">
                 <label for="name">Name</label>
                 <input id="name" name="name" required>
               </div>
-              <div class="push unit xs-1 s-1 m-1 l-1-2 pad-r milli">
+              <div class="push unit xs-1 s-1 m-1 l-1 pad-r milli">
                 <label for="email">Email</label>
-                <input id="email" type="email" placeholder="me@me.com" name="email" required>
+                <input id="email" type="email" placeholder="example@email.com" name="email" required>
               </div>
-              <div class="push unit xs-1 s-1 m-1 l-1-2 pad-l milli">
+              <div class="push unit xs-1 s-1 m-1 l-1 pad-l milli">
                 <label for="number">Password</label>
                 <input id="password" name="password" required>
               </div>
-              <div class="push unit xs-1 s-1 m-1 l-1-2 pad-l milli">
+              <div class="push unit xs-1 s-1 m-1 l-1 pad-l milli">
                 <label for="number">Re-Enter Password</label>
                 <input id="password" name="password" required>
               </div>
             </div>
           </fieldset>
         </form>
+        <a href="index.html" class="btn btn-small">Sign Up</a>
       </div>
     </section>
   </main>
