--- a/tour.html
+++ b/tour.html
@@ -40,24 +40,21 @@
   </header>
 
   <main class="gutter wrapper" id="main" tabindex="0" role="main">
-    <div class="features">
-      <div class="feature-one">
+    <div class="features grid">
+      <div class="feature-one unit xs-1 s-1 m-1-3 l-1-3 island-1-2">
         <img src="images/placeholder-2by3.svg" alt="">
-        <h2>Feature 1</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-        <a href="tour.html" class="btn btn-small">More Features</a>
+        <h2>Total Control</h2>
+        <p>Build your dream website the way you want, using our expertly crafted development tools designed to give you total control over your websites design and functionality. Never run out of options to design the perfect website.</p>
       </div>
-      <div class="feature-two">
+      <div class="feature-two unit xs-1 s-1 m-1-3 l-1-3 island-1-2">
         <img src="images/placeholder-2by3.svg" alt="">
-        <h2>Feature 2</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-        <a href="tour.html" class="btn btn-small">More Features</a>
+        <h2>Get Online Fast</h2>
+        <p>You’ll love how fast you can get online and look amazing! MySite Artificial Design Intelligence (ADI) will instantly build a website personalized just for you, complete with professional text and images that can be tweaked to your liking.</p>
       </div>
-      <div class="feature-three">
+      <div class="feature-three unit xs-1 s-1 m-1-3 l-1-3 island-1-2">
         <img src="images/placeholder-2by3.svg" alt="">
-        <h2>Feautre 3</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-        <a href="tour.html" class="btn btn-small">More Features</a>
+        <h2>Creative Library</h2>
+        <p>Design your website to look clean and professional for free with access to our basic template library that contains 200+ pre-made professionally designed templates, icons and more to help create a website that suites your needs.</p>
       </div>
     </div>
 
