Style template sections

--- a/tour.html
+++ b/tour.html
@@ -58,39 +58,38 @@
       </div>
     </div>
 
-    <div class="templates">
-      <div class="feature-one">
-        <img src="images/placeholder-2by3.svg" alt="">
-        <h2>Template 1</h2>
+    <div class="templates grid text-center">
+      <div class="template-one unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
+        <img class="template-img" src="images/template-one.png" alt="">
+        <h2 class"push-none">Template 1</h2>
         <a href="tour.html" class="btn btn-small">Use</a>
       </div>
-      <div class="feature-two">
-        <img src="images/placeholder-2by3.svg" alt="">
-        <h2>Template 2</h2>
+      <div class="template-two unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
+        <img class="template-img" src="images/template-two.jpg" alt="">
+        <h2 class"push-none">Template 2</h2>
         <a href="tour.html" class="btn btn-small">Use</a>
       </div>
-      <div class="feature-three">
-        <img src="images/placeholder-2by3.svg" alt="">
-        <h2>Template 3</h2>
+      <div class="template-three unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
+        <img class="template-img" src="images/template-three.jpg" alt="">
+        <h2 class"push-none">Template 3</h2>
         <a href="tour.html" class="btn btn-small">Use</a>
       </div>
-      <div class="cards">
-        <div class="feature-one">
-          <img src="images/placeholder-2by3.svg" alt="">
-          <h2>Template 4</h2>
+        <div class="template-four unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
+          <img class="template-img" src="images/template-four.jpg" alt="">
+          <h2 class"push-none">Template 4</h2>
           <a href="tour.html" class="btn btn-small">Use</a>
         </div>
-        <div class="feature-two">
-          <img src="images/placeholder-2by3.svg" alt="">
-          <h2>Template 5</h2>
+        <div class="template-five unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
+          <img class="template-img" src="images/template-five.jpg" alt="">
+          <h2 class"push-none">Template 5</h2>
           <a href="tour.html" class="btn btn-small">Use</a>
         </div>
-        <div class="feature-three">
-          <img src="images/placeholder-2by3.svg" alt="">
-          <h2>Template 6</h2>
+        <div class="template-six unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
+          <img class="template-img" src="images/template-six.jpg" alt="">
+          <h2 class"push-none">Template 6</h2>
           <a href="tour.html" class="btn btn-small">Use</a>
         </div>
-    </div>
+      </div>
   </main>
 
   <footer role="contentinfo">
