Style the homepage

--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
     </div>
 
     <div class="about text-center max-length pad-t-2">
+      <img class="about-img pad-b" src="images/about.jpg" alt="">
       <h2>About</h2>
-      <p class="aboutp">MySite is a website building SaaS website founded in 2008 by Yale Grad Michael Website. In the summer of 2008 the Yale Computer Science Graduate noticed an increase of people using the internet and realized that there was a market of people who wanted to create websites without any prior experience or knowledge about building websites. Thankfully for these people Michael Website created the greatest website builder to ever exist, not only that but he made accessible to people for absolutely free.</p>
+      <p class="aboutp">MySite is a website building SaaS website founded in San Fransisco in the year 2008 by Yale Grad Michael Website. In the summer of 2008 the Yale Computer Science Graduate noticed an increase of people using the internet and realized that there was a market of people who wanted to create websites without any prior experience or knowledge about building websites. Thankfully for these people Michael Website created the greatest website builder to ever exist, not only that but he made accessible to people for absolutely free.</p>
 
       <p class="aboutp">  The quality product paired with the choice to either use it for free or pay for a cheap monthly subscription made it a success. By 2010 MySite reached 1,000,000 registered users who had created over 200,000 websites. These websites varied in content and subject matter but all had one thing in common, they were quality websites that wouldn’t have been possible without Mr.Websites hard work and dedication to create a quality, human-centred product</p>
 
