--- a/tour.html
+++ b/tour.html
@@ -16,27 +16,27 @@
   </ul>
 
   <header role="banner">
-  <div>
-    <i><a href="index.html"><img class="logo absolute" src="images/logo.png" alt="logo"></a></i>
-    <div class="nav navtop text-right">
-      <nav role="navigation" id="nav" tabindex="0">
-        <ul class="push-none grid grid-middle unit list-group">
-          <li class="unit gutter-1-2 pad-b-1-2 pad-t-1-2 bold"><a href="index.html">Home</a></li>
-          <li class="unit gutter-1-2 pad-b-1-2 pad-t-1-2 bold"><a href="tour.html">Products</a></li>
-          <li class="unit gutter-1-2 pad-b-1-2 pad-t-1-2 bold"><a href="pricing.html">Pricing</a></li>
-          <li class="unit gutter-1-2 pad-b-1-2 pad-t-1-2 bold"><a href="sign-up.html">Sign Up</a></li>
-        </ul>
-      </nav>
+    <div>
+      <i><a href="index.html"><img class="logo absolute" src="images/logo.png" alt="logo"></a></i>
+      <div class="nav navtop text-right">
+        <nav role="navigation" id="nav" tabindex="0">
+          <ul class="push-none grid grid-middle unit list-group">
+            <li class="unit gutter-1-2 pad-b-1-2 pad-t-1-2 bold"><a href="index.html">Home</a></li>
+            <li class="unit gutter-1-2 pad-b-1-2 pad-t-1-2 bold"><a href="tour.html">Products</a></li>
+            <li class="unit gutter-1-2 pad-b-1-2 pad-t-1-2 bold"><a href="pricing.html">Pricing</a></li>
+            <li class="unit gutter-1-2 pad-b-1-2 pad-t-1-2 bold"><a href="sign-up.html">Sign Up</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
-  </div>
-  <section class="index-banner pad-t-2 pad-b-2 relative">
-    <div class="banner-text absolute wrapper insland-1-2">
-    <h1 class="push-0 nina">your site.</h1>
-    <h1 class="push-0 nina">your way.</h1>
-    <h6 class"not-bold">Build your very own website</h6>
-    <a href="sign-up.html" class="btn btn-small">Sign Up</a>
-    </div>
-  </section>
+    <section class="index-banner pad-t-2 pad-b-2 relative">
+      <div class="banner-text absolute wrapper insland-1-2">
+        <h1 class="push-0 nina">your site.</h1>
+        <h1 class="push-0 nina">your way.</h1>
+        <h6 class"not-bold">Build your very own website</h6>
+        <a href="sign-up.html" class="btn btn-small">Sign Up</a>
+      </div>
+    </section>
   </header>
 
   <main class="gutter wrapper" id="main" tabindex="0" role="main">
@@ -62,34 +62,34 @@
       <div class="template-one unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
         <img class="template-img" src="images/template-one.png" alt="">
         <h2 class"push-none">Template 1</h2>
-        <a href="tour.html" class="btn btn-small">Use</a>
+        <a href="sign-up.html" class="btn btn-small">Use</a>
       </div>
       <div class="template-two unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
         <img class="template-img" src="images/template-two.jpg" alt="">
         <h2 class"push-none">Template 2</h2>
-        <a href="tour.html" class="btn btn-small">Use</a>
+        <a href="sign-up.html" class="btn btn-small">Use</a>
       </div>
       <div class="template-three unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
         <img class="template-img" src="images/template-three.jpg" alt="">
         <h2 class"push-none">Template 3</h2>
-        <a href="tour.html" class="btn btn-small">Use</a>
+        <a href="sign-up.html" class="btn btn-small">Use</a>
       </div>
-        <div class="template-four unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
-          <img class="template-img" src="images/template-four.jpg" alt="">
-          <h2 class"push-none">Template 4</h2>
-          <a href="tour.html" class="btn btn-small">Use</a>
-        </div>
-        <div class="template-five unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
-          <img class="template-img" src="images/template-five.jpg" alt="">
-          <h2 class"push-none">Template 5</h2>
-          <a href="tour.html" class="btn btn-small">Use</a>
-        </div>
-        <div class="template-six unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
-          <img class="template-img" src="images/template-six.jpg" alt="">
-          <h2 class"push-none">Template 6</h2>
-          <a href="tour.html" class="btn btn-small">Use</a>
-        </div>
+      <div class="template-four unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
+        <img class="template-img" src="images/template-four.jpg" alt="">
+        <h2 class"push-none">Template 4</h2>
+        <a href="sign-up.html" class="btn btn-small">Use</a>
       </div>
+      <div class="template-five unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
+        <img class="template-img" src="images/template-five.jpg" alt="">
+        <h2 class"push-none">Template 5</h2>
+        <a href="sign-up.html" class="btn btn-small">Use</a>
+      </div>
+      <div class="template-six unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
+        <img class="template-img" src="images/template-six.jpg" alt="">
+        <h2 class"push-none">Template 6</h2>
+        <a href="sign-up.html" class="btn btn-small">Use</a>
+      </div>
+    </div>
   </main>
 
   <footer role="contentinfo">
