--- a/tour.html
+++ b/tour.html
@@ -58,7 +58,9 @@
       </div>
     </div>
 
-    <div class="templates grid text-center">
+    <h1 class="text-center pad-t push-0 pad-b-1-2">Templates</h1>
+
+    <div class="templates grid text-center pad-b">
       <div class="template-one unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
         <img class="template-img" src="images/template-one.png" alt="">
         <h2 class"push-none">Template 1</h2>
