--- a/pricing.html
+++ b/pricing.html
@@ -32,8 +32,8 @@
     <section class="index-banner pad-t-2 pad-b-2 relative">
       <div class="banner-text absolute wrapper insland-1-2">
         <h1 class="push-0 nina">your site.</h1>
-        <h1 class="push-0 nina">your way.</h1>
-        <h6 class"not-bold">Build your very own website</h6>
+        <p class="push-0 nina title bold">your way.</p>
+        <p class="subtitle bold">Build your very own website</p>
         <a href="sign-up.html" class="btn btn-small">Sign Up</a>
       </div>
     </section>
