--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <section class="index-banner pad-t-2 pad-b-2 relative">
       <div class="banner-text absolute wrapper insland-1-2">
         <h1 class="push-0 nina">your site.</h1>
-        <h1 class="push-0 nina">your way.</h1>
-        <h6 class"not-bold">Build your very own website</h6>
+        <p class="push-0 nina title bold">your way.</p>
+        <p class="subtitle bold">Build your very own website</p>
         <a href="sign-up.html" class="btn btn-small">Sign Up</a>
       </div>
     </section>
@@ -65,7 +65,6 @@
         </div>
       </div>
 
-
       <div class="getting-started text-center max-length pad-t-2">
         <h2>Getting Started</h2>
         <p class="gstarterd">Getting started with MySite is quick and easy! All you have to do is press the sign up button below, enter your name, email, password and that's it! You're now ready to create your very own personalized website!</p>
@@ -78,7 +77,7 @@
         <h2>About</h2>
         <p class="aboutp">MySite is a website building SaaS website founded in San Fransisco in the year 2008 by Yale Grad Michael Website. In the summer of 2008 the Yale Computer Science Graduate noticed an increase of people using the internet and realized that there was a market of people who wanted to create websites without any prior experience or knowledge about building websites. Thankfully for these people Michael Website created the greatest website builder to ever exist, not only that but he made accessible to people for absolutely free.</p>
 
-        <p class="aboutp">  The quality product paired with the choice to either use it for free or pay for a cheap monthly subscription made it a success. By 2010 MySite reached 1,000,000 registered users who had created over 200,000 websites. These websites varied in content and subject matter but all had one thing in common, they were quality websites that wouldn’t have been possible without Mr.Websites hard work and dedication to create a quality, human-centred product</p>
+        <p class="aboutp">The quality product paired with the choice to either use it for free or pay for a cheap monthly subscription made it a success. By 2010 MySite reached 1,000,000 registered users who had created over 200,000 websites. These websites varied in content and subject matter but all had one thing in common, they were quality websites that wouldn’t have been possible without Mr.Websites hard work and dedication to create a quality, human-centred product</p>
 
         <p class="aboutp">Now in 2019 MySite has over 10,000,000 registered users and 2000 employees Our work environment is one of the most unique on the planet. Home to a diverse group of professionals (and their dogs) in Israel, USA, Lithuania, Germany, Brazil and Ukraine we bring passion, skill and innovation to products people love to use. We’re fueled on snacks, beer and popsicles so we can stay creative, happy and fulfilled.</p>
         <a href="sign-up.html" class="btn btn-large">Sign Up</a>
