--- a/tour.html
+++ b/tour.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Subscriptions</title>
+  <title>Products</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -32,8 +32,8 @@
     <section class="index-banner pad-t-2 pad-b-2 relative">
       <div class="banner-text absolute wrapper insland-1-2">
         <h1 class="push-0 nina">your site.</h1>
-        <h1 class="push-0 nina">your way.</h1>
-        <h6 class"not-bold">Build your very own website</h6>
+        <p class="push-0 nina title bold">your way.</p>
+        <p class="subtitle bold">Build your very own website</p>
         <a href="sign-up.html" class="btn btn-small">Sign Up</a>
       </div>
     </section>
@@ -63,32 +63,32 @@
     <div class="templates grid text-center pad-b">
       <div class="template-one unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
         <img class="template-img" src="images/template-one.png" alt="">
-        <h2 class"push-none">Template 1</h2>
+        <h2>Template 1</h2>
         <a href="sign-up.html" class="btn btn-small">Use</a>
       </div>
       <div class="template-two unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
         <img class="template-img" src="images/template-two.jpg" alt="">
-        <h2 class"push-none">Template 2</h2>
+        <h2>Template 2</h2>
         <a href="sign-up.html" class="btn btn-small">Use</a>
       </div>
       <div class="template-three unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
         <img class="template-img" src="images/template-three.png" alt="">
-        <h2 class"push-none">Template 3</h2>
+        <h2>Template 3</h2>
         <a href="sign-up.html" class="btn btn-small">Use</a>
       </div>
       <div class="template-four unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
         <img class="template-img" src="images/template-four.jpg" alt="">
-        <h2 class"push-none">Template 4</h2>
+        <h2>Template 4</h2>
         <a href="sign-up.html" class="btn btn-small">Use</a>
       </div>
       <div class="template-five unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
         <img class="template-img" src="images/template-five.jpg" alt="">
-        <h2 class"push-none">Template 5</h2>
+        <h2>Template 5</h2>
         <a href="sign-up.html" class="btn btn-small">Use</a>
       </div>
       <div class="template-six unit xs-1 s-1 m-1-2 l-1-2 island-1-2">
         <img class="template-img" src="images/template-six.jpg" alt="">
-        <h2 class"push-none">Template 6</h2>
+        <h2>Template 6</h2>
         <a href="sign-up.html" class="btn btn-small">Use</a>
       </div>
     </div>
