Fix colour contrast

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
   </ul>
 
   <header role="banner">
-    <div class="wrapper">
-      <i><a href="index.html"><img class="logo absolute" src="images/logo.png" alt="logo"></a></i>
-      <div class="nav navtop text-right">
+    <div class="wrapper grid pad-t-1-4 bannercontent">
+      <div class="unit xs-1 s-1-3 m-1-3 l-1-3">
+        <i><a class="aclass" href="index.html"><img class="logo" src="images/logo.png" alt="logo"></a></i>
+      </div>
+      <div class="nav navtop text-right unit xs-1 s-2-3 m-2-3 l-2-3">
         <nav role="navigation" id="nav" tabindex="0">
           <ul class="push-none grid grid-middle unit list-group">
             <li class="unit gutter-1-2 pad-b-1-2 pad-t-1-2 bold"><a href="index.html">Home</a></li>
@@ -33,10 +35,10 @@
     </div>
     <section class="index-banner pad-t-2 pad-b-2 relative">
       <div class="banner-text absolute wrapper insland-1-2">
-        <h1 class="push-0 nina">your site.</h1>
-        <p class="push-0 nina title bold">your way.</p>
+        <h1 class="push-0 nina text-upper">your site.</h1>
+        <p class="push-0 nina title bold text-upper">your way.</p>
         <p class="subtitle bold">Build your very own website</p>
-        <a href="sign-up.html" class="btn btn-small">Sign Up</a>
+        <a href="sign-up.html" class="btn btn-small bold">Sign Up</a>
       </div>
     </section>
   </header>
@@ -73,7 +75,9 @@
       </div>
 
       <div class="about text-center max-length pad-t-2">
-        <img class="about-img pad-b" src="images/about.jpg" alt="">
+        <div class="embed embed-16by9">
+          <img class="about-img pad-b embed-item" src="images/about.jpg" alt="">
+        </div>
         <h2>About</h2>
         <p class="aboutp">MySite is a website building SaaS website founded in San Fransisco in the year 2008 by Yale Grad Michael Website. In the summer of 2008 the Yale Computer Science Graduate noticed an increase of people using the internet and realized that there was a market of people who wanted to create websites without any prior experience or knowledge about building websites. Thankfully for these people Michael Website created the greatest website builder to ever exist, not only that but he made accessible to people for absolutely free.</p>
 
@@ -101,9 +105,9 @@
     <div class="wrapper thefooter">
       <div class="social-icons">
         <ul class="list-group-inline pad-t island-1-2 push-0">
-          <li><i class="icon i-32"><a href="https://twitter.com/"><img class="" src="images/twitter.svg" alt=""></a></i></li>
-          <li><i class="icon i-32"><a href="https://instagram.com/"><img src="images/instagram.svg" alt=""></a></i></li>
-          <li><i class="icon i-32"><a href="https://facebook.com/"><img class="img-flex" src="images/facebook.svg" alt=""></a></i></li>
+          <li><i class="icon i-32"><a href="https://twitter.com/"><img src="images/twitter.svg" alt="twitter"></a></i></li>
+          <li><i class="icon i-32"><a href="https://instagram.com/"><img src="images/instagram.svg" alt="instagram"></a></i></li>
+          <li><i class="icon i-32"><a href="https://facebook.com/"><img class="img-flex" src="images/facebook.svg" alt="facebook"></a></i></li>
         </ul>
       </div>
 
