--- a/pricing.html
+++ b/pricing.html
@@ -16,9 +16,11 @@
   </ul>
 
   <header role="banner">
-    <div class="wrapper">
-      <i><a href="index.html"><img class="logo absolute" src="images/logo.png" alt="logo"></a></i>
-      <div class="nav navtop text-right">
+    <div class="wrapper grid pad-t-1-4 bannercontent">
+      <div class="unit xs-1 s-1-3 m-1-3 l-1-3">
+        <i><a class="aclass" href="index.html"><img class="logo" src="images/logo.png" alt="logo"></a></i>
+      </div>
+      <div class="nav navtop text-right unit xs-1 s-2-3 m-2-3 l-2-3">
         <nav role="navigation" id="nav" tabindex="0">
           <ul class="push-none grid grid-middle unit list-group">
             <li class="unit gutter-1-2 pad-b-1-2 pad-t-1-2 bold"><a href="index.html">Home</a></li>
@@ -31,8 +33,8 @@
     </div>
     <section class="index-banner pad-t-2 pad-b-2 relative">
       <div class="banner-text absolute wrapper insland-1-2">
-        <h1 class="push-0 nina">your site.</h1>
-        <p class="push-0 nina title bold">your way.</p>
+        <h1 class="push-0 nina text-upper">your site.</h1>
+        <p class="push-0 nina title bold text-upper">your way.</p>
         <p class="subtitle bold">Build your very own website</p>
         <a href="sign-up.html" class="btn btn-small">Sign Up</a>
       </div>
@@ -44,14 +46,14 @@
     <div class="cards text-center grid">
       <div class="feature-three unit xs-1 s-1 m-1-2 l-1-4 island-1-2">
         <img src="images/placeholder-2by3.svg" alt="">
-        <h1 class="push-0">Free</h1>
+        <p class="zetta push-0 nina title bold">Free</p>
         <h2 class="yotta">$0</h2>
         <p class="push-0 pad-b-1-2">Gain access to 200+ templates along with fonts and icons, absolutely free</p>
         <a href="sign-up.html" class="btn btn-small">Sign Up</a>
       </div>
       <div class="feature-three unit xs-1 s-1 m-1-2 l-1-4 island-1-2">
         <img src="images/placeholder-2by3.svg" alt="">
-        <h1 class="push-0">Basic</h1>
+        <p class="zetta push-0 nina title bold">Basic</p>
         <h2 class="push-0 yotta">$5</h2>
         <p class="pico push-1-4">per month</p>
         <p class="push-0 pad-b-1-2">Access to more templates fonts and icons swell as your own personal domain</p>
@@ -59,7 +61,7 @@
       </div>
       <div class="feature-three unit xs-1 s-1 m-1-2 l-1-4 island-1-2">
         <img src="images/placeholder-2by3.svg" alt="">
-        <h1 class="push-0">Pro</h1>
+        <p class="zetta push-0 nina title bold">Pro</p>
         <h2 class="push-0 yotta">$15</h2>
         <p class="pico push-1-4">per month</p>
         <p class="push-0 pad-b-1-2">Create and have up to 50 sites online simultaneously with MySite Pro </p>
@@ -67,7 +69,7 @@
       </div>
       <div class="feature-three unit xs-1 s-1 m-1-2 l-1-4 island-1-2">
         <img src="images/placeholder-2by3.svg" alt="">
-        <h1 class="push-0">Business</h1>
+        <p class="zetta push-0 nina title bold">Business</p>
         <h2 class="push-0 yotta">$40</h2>
         <p class="pico push-1-4">per month</p>
         <p class="push-0 pad-b-1-2">Access to the full creative suite as well as unlimited websites of any size</p>
