--- a/sign-up.html
+++ b/sign-up.html
@@ -11,9 +11,11 @@
 </head>
 <body>
   <header role="banner">
-    <div class="wrapper">
-      <i><a href="index.html"><img class="logo absolute" src="images/logo.png" alt="logo"></a></i>
-      <div class="nav navtop text-right">
+    <div class="wrapper grid pad-t-1-4 bannercontent">
+      <div class="unit xs-1 s-1-3 m-1-3 l-1-3">
+        <i><a class="aclass" href="index.html"><img class="logo" src="images/logo.png" alt="logo"></a></i>
+      </div>
+      <div class="nav navtop text-right unit xs-1 s-2-3 m-2-3 l-2-3">
         <nav role="navigation" id="nav" tabindex="0">
           <ul class="push-none grid grid-middle unit list-group">
             <li class="unit gutter-1-2 pad-b-1-2 pad-t-1-2 bold"><a href="index.html">Home</a></li>
@@ -48,7 +50,7 @@
               </div>
               <div class="push unit xs-1 s-1 m-1 l-1 pad-l milli">
                 <label for="number">Re-Enter Password</label>
-                <input id="password" name="password" required>
+                <input id="re-enter-password" name="re-enter-password" required>
               </div>
             </div>
           </fieldset>
